--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ domain: "volodya-leveryev.github.io"
 baseurl: ""
 url: "https://volodya-leveryev.github.io"
 destination: "./docs"
+collections:
+  linux:
+    output: true
