--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,4 +11,5 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install sphinx
+          mkdir docs
           sphinx-build -b html . docs
