--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,14 +1,15 @@
-name: Compile with Sphinx 
+name: Build and Deploy
 on: [push]
 jobs:
-  Compile-with-Sphinx:
+  Build-and-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
       - run: |
-          python -m pip install --upgrade pip
-          pip install sphinx
-          sphinx-build -b html . docs
+          pip install -r requirements.txt
+          pelican
+      - uses: JamesIves/github-pages-deploy-action@v4.3.0
+        with:
+          branch: gh-pages
+          folder: output
