--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,6 +9,7 @@ jobs:
       - run: |
           pip install -r requirements.txt
           pelican
+          touch output/.nojekyll
       - uses: JamesIves/github-pages-deploy-action@v4.3.0
         with:
           branch: gh-pages
