--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "devDependencies": {
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
     "next": "^12.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "export": "next export",
+    "lint": "next lint"
   }
 }
