--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,7 +7,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: |
-          touch output/.nojekyll
+          mkdir out/
+          touch out/.nojekyll
           npm ci
           npm run build
           npm run export
